--- a/public/output.css
+++ b/public/output.css
@@ -536,36 +536,112 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.relative{
-  position: relative;
+.fixed{
+  position: fixed;
 }
 
-.z-0{
-  z-index: 0;
+.top-0{
+  top: 0px;
+}
+
+.right-0{
+  right: 0px;
+}
+
+.z-40{
+  z-index: 40;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mt-2{
   margin-top: 0.5rem;
 }
 
+.flex{
+  display: flex;
+}
+
 .hidden{
   display: none;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.w-5\/6{
+  width: 83.333333%;
+}
+
+.w-full{
+  width: 100%;
+}
+
+.w-\[\]{
+  width: ;
+}
+
+.w-\[300\]{
+  width: 300;
+}
+
+.w-\[300px\]{
+  width: 300px;
 }
 
 .resize{
   resize: both;
 }
 
-.bg-cover{
-  background-size: cover;
+.items-center{
+  align-items: center;
 }
 
-.bg-center{
-  background-position: center;
+.justify-end{
+  justify-content: flex-end;
 }
 
-.bg-no-repeat{
-  background-repeat: no-repeat;
+.justify-between{
+  justify-content: space-between;
+}
+
+.gap-16{
+  gap: 4rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.bg-deep-blue{
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 0 38 / var(--tw-bg-opacity));
+}
+
+.bg-red{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 68 146 / var(--tw-bg-opacity));
+}
+
+.bg-blue{
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 188 233 / var(--tw-bg-opacity));
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-12{
+  padding: 3rem;
 }
 
 .px-6{
@@ -581,6 +657,19 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.font-opensans{
+  font-family: Open Sans, sans-serif;
+}
+
+.font-playfair{
+  font-family: Playfair Display, serif;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-\[14px\]{
@@ -599,12 +688,25 @@ video {
   font-size: 40px;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-black{
   font-weight: 900;
 }
 
+.font-bold{
+  font-weight: 700;
+}
+
 .font-medium{
   font-weight: 500;
+}
+
+.font-semibold{
+  font-weight: 600;
 }
 
 .uppercase{
@@ -625,12 +727,36 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-yellow{
+  --tw-text-opacity: 1;
+  color: rgb(253 204 73 / var(--tw-text-opacity));
+}
+
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
+}
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  background-color: #010026;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-yellow:hover{
+  --tw-text-opacity: 1;
+  color: rgb(253 204 73 / var(--tw-text-opacity));
 }
 
 @media (min-width: 480px){
