--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,400;0,6..12,500;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,500;1,6..12,600;1,6..12,900;1,6..12,1000&family=Playfair+Display:wght@400;600&family=Poppins:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;1,500;1,600;1,700;1,800&family=Roboto+Mono:wght@300;400;500;600;700&family=Roboto:wght@100;300;500&family=Work+Sans:wght@200;400;500;600;700;800&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,400;0,6..12,500;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,500;1,6..12,600;1,6..12,900;1,6..12,1000&family=Playfair+Display:wght@400;600&family=Poppins:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;1,500;1,600;1,700;1,800&family=Roboto+Mono:wght@300;400;500;600;700&family=Roboto:wght@100;300;500&family=Work+Sans:wght@200;400;500;600;700;800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,400;0,6..12,500;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,500;1,6..12,600;1,6..12,900;1,6..12,1000&family=Playfair+Display:wght@400;600&family=Poppins:ital,wght@0,500;0,900;1,500;1,600;1,700;1,800&family=Roboto+Mono:wght@300;400;500;600;700&family=Roboto:wght@100;300;500&family=Work+Sans:wght@200;400;500;600;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,6 +13,6 @@ body,
 #root,
 .app {
   height: 100%;
-  background-color: #010026;
-  @apply text-white;
+  background-color: #fefefe;
+  /* @apply text-white; */
 }
